# web_07

./: config.ini  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: aebcca185703_init.py
database/: db.py  models.py
