[tool.poetry]
name = "module-7"
version = "0.1.0"
description = ""
authors = ["paukdv <paukdv@gmail.com>"]
readme = "README.md"
packages = [{include = "module_7"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
